# Autonomous-Ape

./: .gitignore  Dockerfile  README.md  postStart.sh
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.nivida.json  devcontainer_amd.json  devcontainer_intel.json  devcontainer_nivida.json  requirements.txt
.devcontainer/amd/: devcontainer.json
.devcontainer/fleetbroker-pc/: devcontainer.json
.devcontainer/intel/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.devcontainer/windows/: devcontainer.json
src/sopias4_application/: CMakeLists.txt  README.md  package.xml  setup.py
src/sopias4_application/assets/frontend/: gui.ui
src/sopias4_application/config/: nav2.yaml  nav2_base.yaml  nav2_own_plugins.yaml
src/sopias4_application/doc/output/sopias4_application/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sopias4_application.html
src/sopias4_application/doc/output/sopias4_application/.doctrees/: environment.pickle  index.doctree  modules.doctree  sopias4_application.doctree
src/sopias4_application/doc/output/sopias4_application/_modules/: index.html
src/sopias4_application/doc/output/sopias4_application/_modules/sopias4_application/: robot_manager.html
src/sopias4_application/doc/output/sopias4_application/_sources/: index.rst.txt  sopias4_application.rst.txt
src/sopias4_application/doc/source/: conf.py  modules.rst
src/sopias4_application/launch/: bringup_application.launch.py  bringup_system.launch.py
src/sopias4_application/sopias4_application/: astar.py  gui.py  path_layer.py  planner_util.py  robot_layer.py  robot_manager.py  ui_object.py
src/sopias4_fleetbroker/: README.md  (+2 more)
src/sopias4_framework/: CMakeLists.txt  README.md  package.xml  plugin_bridge_layer.xml  plugin_bridge_planner.xml
src/sopias4_framework/config/: amcl.yaml  amcl_base.yaml  nav2.yaml  nav2_base.yaml  nav2_base_bridges.yaml  nav2_base_pure_plugins.yaml  rviz.rviz  rviz_base.rviz  slam.yaml
src/sopias4_framework/cross_reference/sopias4_framework/: objects.inv
src/sopias4_framework/doc/cross_reference/sopias4_framework/: objects.inv
src/sopias4_framework/doc/output/sopias4_framework/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sopias4_framework.html  sopias4_framework.lib.html  sopias4_framework.nodes.html  sopias4_framework.tools.gui.html  sopias4_framework.tools.html  sopias4_framework.tools.ros2.html  sopias4_framework.tools.scripts.html
src/sopias4_framework/doc/output/sopias4_framework/.doctrees/: environment.pickle  index.doctree  modules.doctree  sopias4_framework.doctree  sopias4_framework.nodes.doctree  sopias4_framework.tools.doctree  sopias4_framework.tools.gui.doctree  sopias4_framework.tools.ros2.doctree  sopias4_framework.tools.scripts.doctree
src/sopias4_framework/doc/output/sopias4_framework/_modules/: index.html
src/sopias4_framework/doc/output/sopias4_framework/_modules/sopias4_framework/nodes/: gui_node.html  robot_manager.html
src/sopias4_framework/doc/output/sopias4_framework/_modules/sopias4_framework/tools/gui/: gui_logger.html  label_subscription_handle.html
src/sopias4_framework/doc/output/sopias4_framework/_modules/sopias4_framework/tools/ros2/: drive_tools.html
src/sopias4_framework/doc/output/sopias4_framework/_modules/sopias4_framework/tools/scripts/: generate_docs.html  generate_ui.html
src/sopias4_framework/doc/output/sopias4_framework/_sources/: index.rst.txt  sopias4_framework.nodes.rst.txt  sopias4_framework.tools.rst.txt
src/sopias4_framework/doc/source/: advanced_infos.md  advanced_infos_link.rst  conf.py  index.rst  installation.md  installation_link.rst  message_def.md  message_def_link.rst  plugin_bridges.md  plugin_bridges_link.rst  running.md  running_link.rst  sopias4_framework.nodes.rst  sopias4_framework.tools.ros2.rst  sopias4_framework.tools.scripts.rst  things_to_consider.md  things_to_consider_link.rst  troubleshooting.md
src/sopias4_framework/include/sopias4_framework/: msgs_utils.hpp  plugin_bridge_controller.hpp  plugin_bridge_layer.hpp  plugin_bridge_planner.hpp
src/sopias4_framework/launch/: amcl.launch.py  bringup_slam.launch.py  bringup_test_system_planner.launch.py  bringup_turtlebot.launch.py  nav2.launch.py  rviz.launch.py  slam.launch.py  tf_relay.launch.py
src/sopias4_framework/sopias4_framework/: __init__.py
src/sopias4_framework/sopias4_framework/nodes/: __init__.py  global_planner_testserver.py  gui_node.py  layer_pyplugin.py  path_layer.py  planner_pyplugin.py  robot_layer.py  robot_manager.py  tf_relay.py  tf_static_relay.py
src/sopias4_framework/sopias4_framework/tools/: __init__.py  elevate_func_to_main_func.py  generate_docs.py  gui_logger.py  label_subscription_handle.py
src/sopias4_framework/sopias4_framework/tools/gui/: gui_logger.py  label_subscription_handle.py
src/sopias4_framework/sopias4_framework/tools/ros2/: costmap_tools.py  drive_tools.py  node_tools.py  yaml_tools.py
src/sopias4_framework/sopias4_framework/tools/scripts/: generate_docs.py  generate_ui.py  restart_turtlebot_nodes.py  turtlebot_ssh_scripts.py
src/sopias4_framework/src/: msgs_utils.cpp  plugin_bridge_controller.cpp  plugin_bridge_layer.cpp  plugin_bridge_planner.cpp
src/sopias4_framework/srv/: EmptyWithStatuscode.srv  Register.srv  SetRobotPath.srv  Unregister.srv
src/sopias4_map_server/: CMakeLists.txt  README.md  package.xml
src/sopias4_map_server/assets/frontend/: gui.ui
src/sopias4_map_server/config/: map_server.yaml
src/sopias4_map_server/doc/cross_reference/sopias4_framework/: objects.inv
src/sopias4_map_server/doc/source/: conf.py  index.rst
src/sopias4_map_server/include/sopias4_map_server/: multi_robot_coordinator.hpp
src/sopias4_map_server/launch/: bringup_server.launch.py  map_server.launch.py  sopias4_map_server.launch.py
src/sopias4_map_server/maps/: default_map.pgm  default_map.yaml
src/sopias4_map_server/sopias4_map_server/: gui.py  ui_object.py
src/sopias4_map_server/src/: multi_robot_coordinator.cpp
(+35 files in other folders)
