<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sopias4_application</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="LeMonkay.VTIT@tutanota.com">NachtaktiverHalbaffe</maintainer>
  <license>Apache-2.0</license>

  <!-- Use both ament_cmake and ament_cmake_python to use C++ and Python nodes in same package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <!-- Python dependencies -->
  <depend>rclpy</depend>

  <!-- Ros2 packages -->
  <depend>sopias4_msgs</depend>
  <depend>sopias4_framework</depend>
  <depend>teb_local_planner</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
